Add second line to draw text character ;

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   text-transform: uppercase;
   text-align: center;
   margin-top: -1em;
-  background: #f59e0b;
+  background: #991b1b;
   padding: 0px 2px;
   border: none;
   color: white;
